Reload z-index fix.

--- a/frontend/src/pages/chat/left_bar/ChatLeftBar.css
+++ b/frontend/src/pages/chat/left_bar/ChatLeftBar.css
@@ -21,6 +21,8 @@
 	align-items: center;
 
 	padding: 0 10px;
+
+	z-index: 4;
 }
 
 #lb-top-wrapper > span {
